finished making api endpoints for executing plans.  The webpage to print a stream is tricky.  I don't know if a user would prefer something like that though
