# henchman-ui-api/api/swagger/swagger.yaml
@@ -119,7 +119,52 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-            
+  /plans/exec/{file}:
+    x-swagger-router-controller: plans
+    get:
+      description: Runs the specified plan with the options provided
+      operationId: execPlan
+      parameters:
+        - name: file
+          in: path
+          description: Name of the plan to be executed.
+          required: true
+          type: string
+        - name: inventory
+          in: query
+          description: Name of the inventory to be executed with the plan.
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Has the output of the executed plan
+          schema:
+            $ref: "#/definitions/PostResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /plans/exec:
+    x-swagger-router-controller: plans
+    get:
+      description: Runs the specified plan with the options provided
+      operationId: getExecStdout
+      responses:
+        "200":
+          description: Has the output of the executed plan
+          schema:
+            required:
+              - data
+              - status
+            properties:
+              data:
+                type: string
+              status:
+                type: integer
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
 # INVENTORY
   /inventory:
     x-swagger-router-controller: inventory
